--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -2,6 +2,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@100;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Syncopate:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Bodoni+Moda:wght@100;700&display=swap");
-body { font-family: "Poppins", sans-serif; }
+body { font-family: "Poppins", sans-serif; margin: 0; padding: 0; background-color: #f5f0ec; }
+
+article, aside, nav, section, h1, h2, h3, h4, h5, h6 { margin: 0; padding: 0; -webkit-margin-before: 0; margin-block-start: 0; -webkit-margin-after: 0; margin-block-end: 0; }
+
+.main-container { padding: 0 5vw; }
+
+section { padding: 100px 0; }
+section .section-header { border: solid 1px red; }
 
 /*# sourceMappingURL=home.css.map */
