--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -8,4 +8,33 @@ $bg-color: #f5f0ec;
 
 body {
   font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: $bg-color;
+}
+article,
+aside,
+nav,
+section,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+
+.main-container {
+  padding: 0 5vw;
+}
+
+section {
+  padding: 100px 0;
+  .section-header {
+    border: solid 1px red;
+  }
 }
